syntax = "proto3";

option go_package = "./proto/v1";
package v1;

service FileUploadService {
  rpc UploadFile(FileUploadRequest) returns (FileUploadResponse) {}
  rpc DownloadFile(FileDownloadRequest) returns (FileDownloadResponse) {}
  rpc GetListFiles(ListFilesRequest) returns (stream ListFilesResponse) {}
}


message FileUploadRequest {
  bytes file_content = 1;
  string file_name = 2;
}

message FileUploadResponse {
  string message = 1;
}

message FileDownloadRequest {
  string file_name = 1;
}

message FileDownloadResponse {
  bytes file_content = 1;
}

message ListFilesRequest {
}

message ListFilesResponse {
  string file_name = 1;
  string date_create = 2;
  string date_change = 3;
}








